finish styling the header and mostly finish the banner (without carousel)

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <h2>Ohhio Blankets Sale</h2>
             <p>Up to 40% off while supplies last</p>
           </div>
-          <button type="button" name="button">SHOP NOW</button>
+          <button>SHOP NOW</button>
         </div>
 
       </section>
