add second banner with two divs in flexrow when page is large

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
           </div>
         </nav>
       </header>
-      <section>
-        <div class="banner">
+      <section id="banners">
+        <div class="banner1">
           <img src="img/banner-img.jpg" alt="woman with a grey knit blanket">
           <div class="banner-text">
             <h2>Ohhio Blankets Sale</h2>
@@ -36,6 +36,32 @@
           </div>
           <button>SHOP NOW</button>
         </div>
+        <div class="design-burb">
+          <h1>Honest Design by Ohhio</h1>
+          <p>We value simplicity, and believe that the goal of any good design is to eliminate unnecessary complication. With each of our creations, we strive to present unadorned beauty.</p>
+          <div class="social-media">
+            <a href="#"><img src="img/facebook.png"></img></a>
+            <a href="#"><img src="img/youtube.png"></img></a>
+            <a href="#"><img src="img/facebook.png"></img></a>
+            <a href="#"><img src="img/youtube.png"></img></a>
+            <a href="#"><img src="img/facebook.png"></img></a>
+            <a href="#"><img src="img/youtube.png"></img></a>
+          </div>
+        </div>
+        <div class="banner2">
+          <div class="red-dot">
+            <img src="img/red-dot-logo.png" alt="red dot design logo">
+            <h1>Red Dot</h1>
+            <p>Proud recipient of the most prestigious award in design</p>
+          </div>
+          <div class="learn-more">
+            <img src="img/gray-yarn.jpg" alt="large gray yarn">
+            <p>learn more<span class="lnr lnr-chevron-right"></span></p>
+          </div>
+        </div>
+
+      </section>
+      <section id="products">
 
       </section>
       <footer>
