add a product section with flex-box

--- a/index.html
+++ b/index.html
@@ -59,9 +59,44 @@
             <p>learn more<span class="lnr lnr-chevron-right"></span></p>
           </div>
         </div>
-
       </section>
-      <section id="products">
+      <section id="ohhio-products">
+        <div class="products">
+          <p>Our Products</p>
+          <div class="product-display">
+            <div class="product">
+              <img src="img/yarn-product.jpg" alt="a product by ohhio">
+              <h2>Arm knitting merino wool (23 microns)</h2>
+              <p>from <span class="price">$59.00</span></p>
+            </div>
+            <div class="product">
+              <img src="img/yarn-product.jpg" alt="a product by ohhio">
+              <h2>Arm knitting merino wool (23 microns)</h2>
+              <p>from <span class="price">$59.00</span></p>
+            </div>
+            <div class="product">
+              <img src="img/yarn-product.jpg" alt="a product by ohhio">
+              <h2>Arm knitting merino wool (23 microns)</h2>
+              <p>from <span class="price">$59.00</span></p>
+            </div>
+            <div class="product">
+              <img src="img/yarn-product.jpg" alt="a product by ohhio">
+              <h2>Arm knitting merino wool (23 microns)</h2>
+              <p><span class="fancy">from </span><span class="price">$59.00</span></p>
+              </div>
+              <div class="product">
+                <img src="img/yarn-product.jpg" alt="a product by ohhio">
+                <h2>Arm knitting merino wool (23 microns)</h2>
+                <p><span class="fancy">from </span><span class="price">$59.00</span></p>
+              </div>
+              <div class="product">
+                <img src="img/yarn-product.jpg" alt="a product by ohhio">
+                <h2>Arm knitting merino wool (23 microns)</h2>
+                <p><span class="fancy">from </span><span class="price">$59.00</span></p>
+              </div>
+            </div>
+          </div>
+        </div>
 
       </section>
       <footer>
