fix product catagories, add some bacis links to publishing sites, and add barely-styled footer

--- a/index.html
+++ b/index.html
@@ -83,24 +83,98 @@
               <img src="img/yarn-product.jpg" alt="a product by ohhio">
               <h2>Arm knitting merino wool (23 microns)</h2>
               <p><span class="fancy">from </span><span class="price">$59.00</span></p>
-              </div>
-              <div class="product">
-                <img src="img/yarn-product.jpg" alt="a product by ohhio">
-                <h2>Arm knitting merino wool (23 microns)</h2>
-                <p><span class="fancy">from </span><span class="price">$59.00</span></p>
-              </div>
-              <div class="product">
-                <img src="img/yarn-product.jpg" alt="a product by ohhio">
-                <h2>Arm knitting merino wool (23 microns)</h2>
-                <p><span class="fancy">from </span><span class="price">$59.00</span></p>
-              </div>
+            </div>
+            <div class="product">
+              <img src="img/yarn-product.jpg" alt="a product by ohhio">
+              <h2>Arm knitting merino wool (23 microns)</h2>
+              <p><span class="fancy">from </span><span class="price">$59.00</span></p>
+            </div>
+            <div class="product">
+              <img src="img/yarn-product.jpg" alt="a product by ohhio">
+              <h2>Arm knitting merino wool (23 microns)</h2>
+              <p><span class="fancy">from </span><span class="price">$59.00</span></p>
             </div>
           </div>
         </div>
-
+        <div class="catagories">
+          <p>Product Categories</p>
+          <div class="cat-container">
+            <a href="#">
+              <img src="img/pink-blanket.jpg" alt="">
+              <p>Blankets</p>
+            </a>
+            <a href="#">
+              <img src="img/pink-blanket.jpg" alt="">
+              <p>Blankets</p>
+            </a>
+            <a href="#">
+              <img src="img/pink-blanket.jpg" alt="">
+              <p>Blankets</p>
+            </a>
+            <a href="#">
+              <img src="img/pink-blanket.jpg" alt="">
+              <p>Blankets</p>
+            </a>
+            <a href="#">
+              <img src="img/pink-blanket.jpg" alt="">
+              <p>Blankets</p>
+            </a>
+            <a href="#">
+              <img src="img/pink-blanket.jpg" alt="">
+              <p>Blankets</p>
+            </a>
+          </div>
+        </div>
+      </section>
+      <section id="outlinks">
+        <div class="site-links">
+          <a href="#"><img src="img/BI.jpg" alt="Buisness Insider"></a>
+          <a href="#"><img src="img/BI.jpg" alt="Buisness Insider"></a>
+          <a href="#"><img src="img/BI.jpg" alt="Buisness Insider"></a>
+          <a href="#"><img src="img/BI.jpg" alt="Buisness Insider"></a>
+          <a href="#"><img src="img/BI.jpg" alt="Buisness Insider"></a>
+          <a href="#"><img src="img/BI.jpg" alt="Buisness Insider"></a>
+        </div>
       </section>
       <footer>
-
+        <div class="footer-main">
+          <div class="foot-links">
+            <ul>
+              <li><p>Shop</p></li>
+              <li><a href="#">all products</a></li>
+              <li><a href="#">blankets</a></li>
+              <li><a href="#">diy</a></li>
+              <li><a href="#">kits</a></li>
+              <li><a href="#">for pets</a></li>
+            </ul>
+            <ul>
+              <li><p>Shop</p></li>
+              <li><a href="#">all products</a></li>
+              <li><a href="#">blankets</a></li>
+              <li><a href="#">diy</a></li>
+              <li><a href="#">kits</a></li>
+              <li><a href="#">for pets</a></li>
+            </ul>
+            <ul>
+              <li><p>Shop</p></li>
+              <li><a href="#">all products</a></li>
+              <li><a href="#">blankets</a></li>
+              <li><a href="#">diy</a></li>
+              <li><a href="#">kits</a></li>
+              <li><a href="#">for pets</a></li>
+            </ul>
+          </div>
+          <div class="subscribe">
+            <p>SUBSCRIBE</p>
+            <input type="text" name="" value="">
+            <button type="button" name="button"></button>
+          </div>
+        </div>
+        <div class="footer-bottom">
+          <a href="#">Terms of Use</a> <span>|</span>
+          <a href="#">Privacy Policy</a>
+          <p>&copy; all rights resverved</p>
+        </div>
       </footer>
     </div>
   </body>
